# Portal-assistant-bot

./: .env.example  .gitignore  README.md  STEPS TO RUN.md  pyproject.toml
DOCS/: CHANGELOG.md  CONTEXT.md  GUIDE.md  PRODUCT_PLAN.md  PROTOCOL.md  requirement.md
curationpilot-app/: index.html  package-lock.json  package.json  vite.config.ts
curationpilot-app/src/: App.tsx  index.css
curationpilot_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pilot/: __init__.py  annotate.py  audit.py  browser.py  cli.py  models.py  runner.py  skill_models.py  skill_runner.py  teach.py
pilot/adapters/: __init__.py  base.py  media_assets.py
pilot/agent/: __init__.py  annotate_llm.py  catalog.py  clarify.py  cli.py  executor_real.py  intake.py  locator_repair.py  orchestrator.py  (+5 more)
sample_portal/: index.html  package-lock.json  package.json  vite.config.js
sample_tasks/: add_and_verify.json
scripts/: annotate_skill_llm.py  e2e_cli_run.py  e2e_test.py  eval_phase6_clarify_quality.py  eval_phase6_executor.py  eval_phase6_hostile_bench.py  eval_phase6_stress.py  eval_planner.py  eval_planner_bench.py  inspect_skill.py  launch_chrome_cdp.sh  operator_test_suite.py  replay_nl.cmd  reset_portal.py  resilience_test.py  serve_portal.sh  simulate_operator.py  teach_workflow.py
skills/: curate_carousel.json  curate_carousel.v2.json  curate_featured_row.json  curate_featured_row.v2.json  curate_grid_2x2.json  curate_grid_2x2.v2.json  curate_layout.json  curate_one_item.json  curate_one_item_drifted.json  my_curation.json  my_curation.v2.json  ui_demo.json  ui_demo.v2.json
(+58 files in other folders)
