[project]
name = "curationpilot-poc"
version = "0.1.0"
description = "Local supervised browser automation POC — deterministic adapters over CDP."
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.47.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pilot*"]
